some testin changes

--- a/apps/public/src/index.html
+++ b/apps/public/src/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Public</title>
-    <base href="/" />
+    <head>
+        <meta charset="utf-8" />
+        <title>Wil Marques</title>
+        <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <blog-root></blog-root>
-  </body>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+        <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
+        />
+    </head>
+    <body>
+        <blog-root>JS desabilitado</blog-root>
+    </body>
 </html>
